# life-os

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
config/: __init__.py  settings.example.yaml
connectors/: __init__.py  crypto.py  registry.py
docs/: how-it-works.md  improvements.md  plan-ui-improvements.md  unused-capability-audit.md
models/: __init__.py  core.py  user_model.py
scripts/: __init__.py  analyze-data-quality.py  backfill_all_denormalized_columns.py  backfill_cadence_profile.py  backfill_calendar_conflicts.py  backfill_communication_templates.py  backfill_decision_profile.py  backfill_denormalized_columns.py  backfill_episode_classification.py  backfill_episode_energy_levels.py  backfill_episode_timestamps.py  backfill_episodes_from_events.py  backfill_linguistic_inbound_profile.py  backfill_linguistic_profile.py  backfill_mood_profile.py  backfill_orphaned_predictions.py  backfill_relationship_profile.py  backfill_reminder_contacts.py  backfill_spatial_profile.py  backfill_task_completion.py  backfill_task_extraction.py  backfill_temporal_profile.py  backfill_topic_profile.py  clean_relationship_profile_marketing.py  cleanup_prediction_backlog.py  com.lifeos.continuous-improve.plist  com.lifeos.improve.plist  diagnose_prediction_silence.py  diagnose_prediction_types.py  improve-lifeos.md  improvement-agent.md  run-continuous-improvement.sh  run-improvement.sh  setup.sh  test_prediction_filtering.py  test_routine_deviation.py
services/: __init__.py  (+2 more)
(+716 files in other folders)
