[project]
name = "life-os"
version = "0.1.0"
requires-python = ">=3.12"

# =============================================================================
# Ruff — linting + formatting (replaces flake8, black, isort)
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names, etc.)
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (use modern Python syntax)
    "B",    # flake8-bugbear (common bug patterns)
    "SIM",  # flake8-simplify (simplifiable code)
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — let the formatter handle it
    "B008",   # function call in default argument (common in FastAPI)
    "SIM108", # ternary operator — sometimes if/else is clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]  # relax bugbear/simplify rules in tests

[tool.ruff.lint.isort]
known-first-party = ["connectors", "models", "services", "storage", "web"]

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
